Closed Bug 1682170 Opened 5 years ago Closed 5 years ago

Fix touch-action:pinch-zoom support in TouchActionHelper

Categories

(Core :: Panning and Zooming, defect)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- fixed
firefox86 --- fixed

People

(Reporter: kats, Assigned: kats)

References

Details

Attachments

(1 file)

https://searchfox.org/mozilla-central/rev/95cf843de977805a3951f9137f5ff1930599d94e/gfx/layers/apz/util/TouchActionHelper.cpp#24

This needs fixing for proper support of touch-action:pinch-zoom. I forgot about this code when I mentored bug 1329241 with the rest of the implementation.

The TouchActionHelper codepath is only used in some fallback scenarios, so I'm not sure if a lot of real world sites would be affected. I only realized the problem due to unrelated code browsing. It's a pretty small fix, I'll try to write a test that exercises the scenario as well. We'll want to uplift to 85 so it rides with bug 1329241.

The code in TouchActionHelper didn't get updated with the
rest of the touch-action:pinch-zoom implementation. This
patch corrects that and adds a test that exercises the
relevant scenario.

Pushed by kgupta@mozilla.staktrace.com: https://hg.mozilla.org/integration/autoland/rev/87d37f9061c7 Update TouchActionHelper to support touch-action:pinch-zoom. r=botond
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch

Comment on attachment 9192944 [details]
Bug 1682170 - Update TouchActionHelper to support touch-action:pinch-zoom. r?botond

Beta/Release Uplift Approval Request

  • User impact if declined: In some cases, web content with touch-action:pinch-zoom may not work as intended.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Pretty small, well-understood change. Comes with test.
  • String changes made/needed: none
Attachment #9192944 - Flags: approval-mozilla-beta?
Flags: in-testsuite+

Comment on attachment 9192944 [details]
Bug 1682170 - Update TouchActionHelper to support touch-action:pinch-zoom. r?botond

approved for 85.0b2

Attachment #9192944 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: