Bug 1682170 - Update TouchActionHelper to support touch-action:pinch-zoom. r=botond a=jcristau

The code in TouchActionHelper didn't get updated with the
rest of the touch-action:pinch-zoom implementation. This
patch corrects that and adds a test that exercises the
relevant scenario.

Differential Revision: https://phabricator.services.mozilla.com/D99629