gfx/layers/apz/util/APZEventState.cpp
@@ -391,6 +391,10 @@ void APZEventState::ProcessTouchEvent(
     mFirstTouchCancelled = false;
   }
 
+  APZES_LOG("Pointercancel if %d %d %d %d %d\n", sentContentResponse,
+            !isTouchPrevented, aApzResponse == nsEventStatus_eConsumeDoDefault,
+            StaticPrefs::dom_w3c_pointer_events_enabled(),
+            MainThreadAgreesEventsAreConsumableByAPZ());
   if (sentContentResponse && !isTouchPrevented &&
       aApzResponse == nsEventStatus_eConsumeDoDefault &&
       StaticPrefs::dom_w3c_pointer_events_enabled() &&
